--- a/o-que-e-blog.html
+++ b/o-que-e-blog.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style/styleblog.css">
     <style>
         .banner {
-    background-image: url(/images/blog_600_1280.jpg); 
+    background-image: url(./images/blog_600_1280.jpg); 
     background-position: center center;   
     max-width: 100%;
     min-height: 550px;
