--- a/o-que-e-uma-landing-page.html
+++ b/o-que-e-uma-landing-page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/style.css">
     <style>
     .banner {
-        background-image: url(../images/landing_600.jpg); 
+        background-image: url(./images/landing_600.jpg); 
         background-position: center center;   
         max-width: 100%;
         min-height: 575px;
