--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </header>
     <div class="banner">
         <h1> Think Different! </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit cumque rerum, reiciendis, consectetur. <p>A possimus sit harum sequi fugiat odit eum sapiente, autem nihil maiores laboriosam ut labore.</p>
+        <p>Não imitem o comportamento e os costumes deste mundo, mas deixem que Deus os transforme por meio de uma <em>mudança em seu modo de pensar</em>, a fim de que experimentem a boa, agradável e perfeita vontade de Deus para vocês.
+            <p class="rom">Romanos 12:2</p> 
     </div>
 
     <section class="flex">
