--- a/index.html
+++ b/index.html
@@ -59,4 +59,7 @@
         </div>    
     </section>
 </body>
+<footer>
+    Curso FullStack <a href="https://b7web.com.br/">B7web</a> - Professor <a href="https://github.com/bonieky">Bonieky Lacerda</a> - Aluna: <a href="https://www.linkedin.com/in/claudiakruger/">Cláudia Krüger</a> - Exercício.
+</footer>
 </html>
